# publishr

./: .env.example  .firebaserc  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  apphosting.yaml  firebase.json  firestore.indexes.json  firestore.rules  netlify.toml  node_modules  package-lock.json  package.json  pyproject.toml
agents/: pyproject.toml
agents/publishr_agents/: __init__.py  agents.py  authoring.py  canned.py  mode_a.py  observability.py  persist_mapping.py  pipeline.py  prompts.py  result.py  run_pipeline.py  scheduler.py  state_keys.py
agents/publishr_agents/casting/: __init__.py  deterministic.py  favorites.py  vertex_agent.py
agents/publishr_agents/cover/: __init__.py  deterministic.py  imagen.py  vertex_agent.py
agents/publishr_agents/llm/: __init__.py  provider.py  resilience.py  runtime.py
agents/publishr_agents/mode_b/: __init__.py  deterministic.py  vertex_agent.py
agents/publishr_agents/observe/: __init__.py  fixture_source.py  google_mapping.py  google_source.py  source.py  transform.py
agents/publishr_agents/planning/: __init__.py  deterministic.py  vertex_agent.py  vertex_set.py
agents/publishr_agents/preview/: __init__.py  deterministic.py  vertex_agent.py
agents/publishr_agents/prompts/: __init__.py  legacy.py  loader.py  registry.py  render.py
agents/publishr_agents/reader/: __init__.py  deterministic.py  preferences.py  vertex_agent.py
agents/publishr_agents/vertex/: __init__.py  miniloop.py
agents/tests/: test_arrivals_persist.py  test_casting.py  test_casting_vertex.py  test_cover.py  test_cover_vertex.py  test_favorites_gate.py  test_folder_labels.py  test_llm_provider.py  test_miniloop_vertex.py  test_mode_a_set.py  test_mode_b.py  test_observability.py  test_observe.py  test_observe_google.py  test_observe_office.py  test_observe_uid_token.py  test_persist_mapping.py  test_pipeline.py  test_pipeline_dispatch.py  test_planning.py  test_planning_set_vertex.py  test_planning_vertex.py  test_preview.py  test_preview_vertex.py  test_prompt_review_dump.py  test_prompts_loader.py  test_reader.py  test_reader_preferences.py  test_reader_vertex.py  test_render.py  test_resilience.py  test_runtime_guard.py  test_scheduler.py
apps/api/: Dockerfile  pyproject.toml
apps/api/publishr_api/: __init__.py  config.py  deps.py  errors.py  main.py  schemas.py
apps/api/publishr_api/repositories/: __init__.py  firestore_repository.py  mock_repository.py  protocol.py
apps/api/publishr_api/routers/: __init__.py  api.py  auth.py  books.py  monitoring.py  personas.py  pipeline.py  plans.py  users.py  worker.py
apps/api/publishr_api/services/: __init__.py  body_store.py  cover_store.py  demo_rate_limit.py  discord_alert.py  feedback_service.py  mode_a_service.py  oauth_service.py  pipeline_service.py  rate_limit.py  (+6 more)
apps/api/tests/: test_api.py  test_auth_router.py  test_body_offload.py  test_body_store.py  test_body_store_gcs.py  test_config.py  test_cover_store.py  test_demo_rate_limit.py  test_eval_gate.py  test_eval_gate_vertex.py  test_eval_harness.py  test_eval_reproducibility.py  test_eval_threshold_sweep.py  test_firebase_verify.py  test_firestore_doc_id.py  test_firestore_owner_scope.py  test_mode_a_service.py  test_monitoring_alert.py  test_oauth_service.py  test_pipeline_guard.py  test_public_write_guards.py  test_rate_limit.py  test_reservation_cap.py  test_run_prompt.py  test_run_prompt_vertex.py  test_smoke_discipline.py  test_token_store.py  test_trigger_guard.py  test_worker_endpoint.py  test_write_worker.py
(+249 files in other folders)
