[project]
name = "publishr-agents"
version = "0.0.0"
description = "Publishr 企画会議パイプライン（ADK マルチエージェント）"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "google-adk>=2.1,<3",
    "publishr-schema",
    "langfuse>=3,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["publishr_agents"]
