[project]
name = "publishr-agents"
version = "0.0.0"
description = "Publishr 企画会議パイプライン（ADK マルチエージェント）"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "google-adk>=2.1,<3",
    "publishr-schema",
    "langfuse>=3,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# STEP0 観測の実Google API連携（PUBLISHR_OBSERVE=google）。
# オフライン既定では不要。make setup の --all-extras で開発/CIに入る。
google = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    # Drive 上の Office ファイル(.docx/.xlsx/.pptx)の本文抽出（_extract_office_text・lazy import）。
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["publishr_agents"]
