[project]
name = "publishr-api"
version = "0.0.0"
description = "Publishr BFF（FastAPI）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "publishr-schema",
    "publishr-agents",
    "firebase-admin>=6.5",
    "google-cloud-pubsub>=2.21",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["publishr_api"]
