[project]
name = "publishr-api"
version = "0.0.0"
description = "Publishr BFF（FastAPI）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "publishr-schema",
    "publishr-agents",
    "firebase-admin>=6.5",
    "google-cloud-pubsub>=2.21",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
# 本番の per-uid トークン保存（PUBLISHR_OAUTH_TOKEN_STORE=secret_manager・G1-5）。
# 既定の file バックエンドはこの extra 無しで動く（オフライン/dev）。
secret-manager = ["google-cloud-secret-manager>=2.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["publishr_api"]
